# Morse

./: .gitignore  AUTHORS  Makefile.am  configure.ac
include/: menu.h
lib/: Makefile.am  morse.c  morse.h
src/: Makefile.am  main.c  menu.c
src/lib/: Makefile.am  alphanumeric-morse.c  alphanumeric-morse.h
test/: Makefile.am  check_morse  check_morse.c
